@@ -82,6 +82,7 @@ return {
 				areaofeffect = 140,
 				avoidfeature = false,
 				burnblow = true,
+				collidefriendly = false,
 				craterboost = 0,
 				cratermult = 0,
 				edgeeffectiveness = 0.9,
