@@ -118,7 +118,7 @@ return {
 				name = "Long-Range Naval Cluster Artillery Cannon",
 				noselfdamage = true,
 				range = 930,
-				reloadtime = 9.1,
+				reloadtime = 11.1,
 				rgbcolor = "0.7 0.7 1.0 1.0 1.0 1.0 1.0 1.0",
 				soundhit = "xplomed4",
 				soundhitwet = "splsmed",
@@ -128,10 +128,10 @@ return {
 				weaponvelocity = 345,
 				customparams = {
 					cluster_def = 'cluster_munition',
-					cluster_number = 6,
+					cluster_number = 5,
 				},
 				damage = {
-					default = 220,
+					default = 300,
 					subs = 50,
 					vtol = 50,
 				},
@@ -150,7 +150,7 @@ return {
 				name = "Long-Range Naval Cluster Artillery Cannon",
 				noselfdamage = true,
 				range = 930,
-				reloadtime = 9,
+				reloadtime = 11,
 				rgbcolor = "0.7 0.7 1.0 1.0 1.0 1.0 1.0 1.0",
 				soundhit = "xplomed4",
 				soundhitwet = "splsmed",
@@ -160,10 +160,10 @@ return {
 				weaponvelocity = 345,
 				customparams = {
 					cluster_def = 'cluster_munition',
-					cluster_number = 6,
+					cluster_number = 5,
 				},
 				damage = {
-					default = 220,
+					default = 300,
 					subs = 50,
 					vtol = 50,
 				},
@@ -187,8 +187,8 @@ return {
 				soundstart = "cannhvy2",
 				weapontype = "Cannon",
 				damage = {
-					default = 70,
-					lboats = 70,
+					default = 105,
+					lboats = 105,
 					subs = 25,
 					vtol = 25,
 				},
