@@ -128,7 +128,7 @@ return {
 				name = "Heavy Long-Range Cluster Plasma Cannon",
 				noselfdamage = true,
 				range = 1100,
-				reloadtime = 2.2,
+				reloadtime = 2.3,
 				rgbcolor = "0.7 0.7 1.0",
 				soundhit = "xplomed2",
 				soundhitwet = "splsmed",
@@ -138,7 +138,7 @@ return {
 				weaponvelocity = 450,
 				customparams = {
 					cluster_def = 'cluster_munition',
-					cluster_number = 10,
+					cluster_number = 7,
 					exclude_preaim = true,
 					smart_priority = true,
 				},
@@ -168,8 +168,8 @@ return {
 				soundstart = "cannhvy5",
 				weapontype = "Cannon",
 				damage = {
-					default = 65,
-					lboats = 65,
+					default = 105,
+					lboats = 105,
 					subs = 15,
 					vtol = 15,
 				},
@@ -192,7 +192,7 @@ return {
 				name = "Heavy Long-Range High-Trajectory Cluster Plasma Cannon",
 				noselfdamage = true,
 				range = 1100,
-				reloadtime = 2.2,
+				reloadtime = 2.3,
 				rgbcolor = "0.7 0.7 1.0",
 				soundhit = "xplomed2",
 				soundhitwet = "splsmed",
@@ -202,7 +202,7 @@ return {
 				weaponvelocity = 450,
 				customparams = {
 					cluster_def = 'cluster_munition',
-					cluster_number = 10,
+					cluster_number = 7,
 					exclude_preaim = true,
 					smart_backup = true,
 				},
