@@ -105,49 +105,6 @@ return {
 			},
 		},
 		weapondefs = {
-			shocker_high = {
-				accuracy = 300,
-				sprayangle = 300,
-				areaofeffect = 150,
-				avoidfeature = false,
-				avoidfriendly = false,
-				cegtag = "starfire-small",
-				collidefriendly = false,
-				craterareaofeffect = 116,
-				craterboost = 0.1,
-				cratermult = 0.1,
-				burst = 4,
-				burstrate = 0.06,
-				edgeeffectiveness = 0.15,
-				energypershot = 5000,
-				explosiongenerator = "custom:starfire-explosion",
-				gravityaffected = "true",
-				heightboostfactor = 8,
-				impulsefactor = 0.5,
-				leadbonus = 0,
-				model = "legbomb.s3o",
-				name = "Long-Range g2g Heavy Cluster Plasma Cannon",
-				noselfdamage = true,
-				range = 3100,
-				reloadtime = 12,
-				soundhit = "lrpcexplo",
-				soundhitwet = "splshbig",
-				soundstart = "lrpcshot3",
-				soundhitvolume = 38,
-				soundstartvolume = 24,
-				turret = true,
-				weapontype = "Cannon",
-				weaponvelocity = 1000,
-				customparams = {
-					cluster_def = 'cluster_munition',
-					cluster_number = 8,
-				},
-				damage = {
-					default = 500,
-					shields = 250,
-					subs = 100,
-				},
-			},
 			cluster_munition = {
 				areaofeffect = 115,
 				avoidfeature = false,
@@ -169,8 +126,7 @@ return {
 				weapontype = "Cannon",
 				reloadtime = 11,
 				damage = {
-					default = 50,
-					lboats = 100,
+					default = 100,
 					subs = 25,
 					vtol = 25,
 				},
@@ -199,7 +155,7 @@ return {
 				name = "Long-Range g2g Heavy Cluster Plasma Cannon",
 				noselfdamage = true,
 				range = 3100,
-				reloadtime = 12,
+				reloadtime = 14.4,
 				soundhit = "lrpcexplo",
 				soundhitwet = "splshbig",
 				soundstart = "lrpcshot3",
@@ -207,15 +163,15 @@ return {
 				soundstartvolume = 24,
 				turret = true,
 				weapontype = "Cannon",
-				weaponvelocity = 1000,
+				weaponvelocity = 800,
 				customparams = {
 					cluster_def = 'cluster_munition',
-					cluster_number = 4,
+					cluster_number = 6,
 				},
 				damage = {
-					default = 500,
-					shields = 250,
-					subs = 100,
+					default = 600,
+					shields = 300,
+					subs = 120,
 				},
 			},
 		},
